# quality

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1a2b3c4d5e6f_add_bom_template_lineage_fields.py  2f7c9e1a4b6d_backfill_approved_bom_status.py  3c1c7f0d9f21_add_device_bom_tables.py  4f2a8c7e9b31_add_component_qc_flag_to_assembly_links.py  5b7f2a1c9d4e_add_service_session_upload_correlation.py  7ffa54192841_initial_schema.py  8e1b7c4d2a10_version_bom_templates_and_bind_assembly.py  9bfe77cf8306_expand_qc_run_targets.py  9c1d7e4b2f80_add_service_session_client_upload_telemetry.py  README.md  a4b9d6e2c3f1_add_bom_release_metadata.py  a7c4d8e1f2b3_add_qc_item_reservation_fields.py  a9f2d1c6b7e3_add_bom_part_number_and_revision_rules.py  b71c2d4e5f90_add_bom_drawing_number_and_revision_rules.py  c4b1d9a7e2f0_add_qc_product_configuration_fields.py  c4e6f8129ab3_add_bom_template_status.py  c8d4e1b2f7a9_add_bom_effectivity_window.py  d3a6c1b2e4f5_add_operator_login_fields.py  e1a4c7d9b5f2_add_bom_integrity_constraints_and_indexes.py  e5c1a7d4b9f2_add_qc_step_control_region_fields.py  (+2 more)
backend/app/: __init__.py  database.py  main.py
backend/tests/: conftest.py  test_alembic_migrations.py  test_api.py  test_dashboard_bootstrap_smoke.py  test_demo_seed.py  test_dev_dashboard_demo.py
final-test-runner/: README.md  pyproject.toml
final-test-runner/servicetrace_runner/: api_client.py  main.py  mcu_client.py
final-test-runner/tests/: test_mock_mcu.py
(+199 files in other folders)
