[project]
name = "servicetrace-backend"
version = "0.1.0"
description = "ServiceTrace FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.0",
  "psycopg[binary]>=3.2",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["app*"]
