[project]
name = "servicetrace-final-test-runner"
version = "0.1.0"
description = "Final test runner for ServiceTrace"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32",
  "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-requests>=2.32",
]

[project.scripts]
servicetrace-final-test = "servicetrace_runner.main:main"

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["serial"]
ignore_missing_imports = true
